Fixed overflow of chatbox (added scrollbar)

--- a/public/css/chats.css
+++ b/public/css/chats.css
@@ -164,6 +164,7 @@
     align-items: stretch;
     gap: 0.5em;
     padding: 1em;
+    overflow: auto;
 
     height: 100%;
 }
