--- a/public/css/common.css
+++ b/public/css/common.css
@@ -83,5 +83,4 @@ main
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
-    overflow: auto;
 }
